clean some useless resource, change some code by lint